Fixes. Test of Pump.io timeline parsing added.